fix:Task 019 completed with all changes

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -4,5 +4,7 @@ notFound=has not been found
 duplicate=is already in use
 nonNumeric=must be all numeric
 duplicateFormSubmission=Duplicate form submission is not allowed
+typeMismatch.date1=Formato inválido, por favor introduzca su fecha correctamente: yyyy-MM-dd
 typeMismatch.date=invalid date
+typeMismatch.date2=Formato inválido, por favor introduzca su fecha correctamente: yyyy-MM-dd
 typeMismatch.birthDate=invalid date
