--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -8,3 +8,4 @@ typeMismatch.date1=Formato inválido, por favor introduzca su fecha correctament
 typeMismatch.date=Fecha inválida
 typeMismatch.date2=Formato inválido, por favor introduzca su fecha correctamente: yyyy-MM-dd
 typeMismatch.birthDate=Fecha inválida
+typeMismatch.budgetTarget=El presupuesto objetivo tiene que ser string
